--- a/base.html
+++ b/base.html
@@ -28,7 +28,7 @@
 <body>
     <div id="navbar" class="row">
         <div class="logo col-2">
-            Emily Anderson
+            <a href="index.html">Emily Anderson</a>
         </div>
         <div class="navLabels col-4 offset-4">
                 <div>About</div>
@@ -37,6 +37,28 @@
                 <div>Contact</div>
         </div>
     </div>
+
+
+
+    <!--cs-rr-slide-base-->
+    <div id="cs-rr-section-1" class="row cs-rr-style">
+        <div id="rr-1-text" class="col-7 cs-rr-text-container">
+            <div id="rr-1-subtext-1" class="row cs-rr-style-text">
+                <div class="row">
+                    <h6>SUBTITLE:</h6>
+                </div>
+                <div class="row">
+                   <h7>Heading</h7>
+                </div>
+            </div>
+            <div id="rr-1-subtext-2" class="row cs-rr-style-subtext-2">
+                <p>insert copy
+                </p>
+            </div>
+        </div>
+      
+    </div>
+
 </body>
 <footer>
     <div id="footer" class="row">
