--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
         </div>
         <div class="navLabels col-4 offset-4">
             <div><a href="about.html">About</a></div>
-            <div>Resume</div>
+            <a href="resume.html"><div>Resume</div></a>
             <a href="work.html"><div>Work</div></a>
             <div>Contact</div>
         </div>
