--- a/ux-cs-landing.html
+++ b/ux-cs-landing.html
@@ -45,6 +45,26 @@
                 <h2>UX/UI Design Case Studies</h2>
                 <p>Participating in a UX/UI Design Certification Program was my favorite thing I have ever done. Here's some highlights from it.</p>
             </div>
+            <div class="row ux-skill-item-container">
+                <div class="col-2 ux-skill-item">
+                    <p>Figma</p>
+                </div>
+                <div class="col-2 ux-skill-item">
+                    <p>Interaction Design</p>
+                </div>
+                <div class="col-2 ux-skill-item">
+                    <p>HTML, CSS, Bootsrap, JavaScript</p>
+                </div>
+                <div class="col-2 ux-skill-item">
+                    <p>User Research</p>
+                </div>
+                <div class="col-2 ux-skill-item">
+                    <p>Site Mapping</p>
+                </div>
+                <div class="col-2 ux-skill-item">
+                    <p>User Persona Creation</p>
+                </div>
+            </div>
         </div>
         <div id="ux-cs-landing-preview-styles" class="row ux-cs-landing-preview-container">
             <div id="studiyoPrev" class="row ux-cs-landing-case-preview">
@@ -115,7 +135,7 @@
     <script src="script-ux-cs-landing.js"></script>
 </body>
 <footer>
-    <div id="footer" class="row">
+    <div id="footer-ux-cs-landing" class="row">
         <div class="col-6">
             <h3>Let's stay in touch.</h3>
             <p>How can I help?</p>
