--- a/writing-samples.html
+++ b/writing-samples.html
@@ -53,7 +53,20 @@
         <div class="row">
             <h1>Writing Samples</h1>
         </div>
-
+        <div class="row writing-skill-item-container">
+            <div class="col-3 writing-skill-item">
+                <p>Blog Writing</p>
+            </div>
+            <div class="col-3 writing-skill-item">
+                <p>Social Copy</p>
+            </div>
+            <div class="col-3 writing-skill-item">
+                <p>Copywriting</p>
+            </div>
+            <div class="col-3 writing-skill-item">
+                <p>Copy Editing</p>
+            </div>
+        </div>
 
         <div class="row work-cards">
 
