--- a/case-study-rr.html
+++ b/case-study-rr.html
@@ -35,7 +35,7 @@
             </div>
         </div>
         <div id="navbar-split-bg" class="col-6">
-              <div class="navLabels col-8 offset-4">
+            <div class="navLabels col-12 col-lg-4">
             <div>About</div>
             <div>Resume</div>
             <div>
@@ -52,7 +52,7 @@
 
 
     <div id="cs-rr-section-1" class="row cs-rr-style">
-        <div id="rr-1-text" class="col-6 cs-rr-text-container">
+        <div id="rr-1-text" class="col-12 col-sm-12 col-lg-6 cs-rr-text-container">
             <div id="rr-1-subtext-1" class="row cs-rr-style-text">
                 <div class="row">
                     <h6>PROJECT OVERVIEW:</h6>
@@ -75,14 +75,14 @@
                 </p>
             </div>
         </div>
-        <div class="col-6">
+        <div class="col-12 col-sm-12 col-lg-6">
             <div class="row">
                 <img id="rr-1-petfriends" class="ux-cs-rr-img" src="css/images/ux-cs-rr/petfriends.png">
             </div>
         </div>
     </div>
     <div id="cs-rr-section-2" class="row cs-rr-style">
-        <div id="rr-2-text" class="col-6 cs-rr-text-container">
+        <div id="rr-2-text" class="col-12 col-sm-12 col-lg-6 cs-rr-text-container">
             <div id="rr-2-subtext-1" class="row cs-rr-style-text">
                 <div class="row">
                     <h6>USER INTERVIEWS:</h6>
@@ -100,15 +100,15 @@
                 <img id="cs-rr-section-2-img1" src="/css/images/ux-cs-rr/rr-2-research-goals.svg">
             </div>
         </div>
-        <div id="cs-rr-section-2-split-bg" class="col-6">
-            <div class="row">
+        <div id="cs-rr-section-2-split-bg" class="col-12 col-sm-12 col-lg-6 cs-rr-text-container">
+            <div class="row mx-auto">
                 <img id="cs-rr-section-2-img2" src="/css/images/ux-cs-rr/rr-2-interview-quotes.svg">
             </div>
         </div>
     </div>
     <div id="cs-rr-section-3" class="row cs-rr-style">
         <div class="row">
-            <div id="rr-3-text" class="col-7 cs-rr-text-container">
+            <div id="rr-3-text" class="col-12 col-sm-12 col-lg-7 cs-rr-text-container">
                 <div id="rr-3-subtext-1" class="row cs-rr-style-text">
                     <div class="row">
                         <h6>RESEARCH INSIGHTS:</h6>
@@ -123,19 +123,18 @@
                 </div>
             </div>
         </div>
-
         <div id="rr-section-3-upper-containter" class="row">
-            <div class="col-4 rr-section-3-upper">
+            <div class="col-4 col-sm-4col-lg-4 rr-section-3-upper">
                 <div id="rr-upper-radius" class="row">
                     <p>icon</p>
                 </div>
             </div>
-            <div class="col-4 rr-section-3-upper">
+            <div class="col-4 col-sm-4 col-lg-4 rr-section-3-upper">
                 <div id="rr-upper-radius" class="row">
                     <p>icon</p>
                 </div>
             </div>
-            <div class="col-4 rr-section-3-upper">
+            <div class="col-4 col-sm-4 col-lg-4 rr-section-3-upper">
                 <div id="rr-upper-radius" class="row">
                     <p>icon</p>
                 </div>
@@ -144,7 +143,7 @@
 
 
         <div class="row rr-section-3-card-container">
-            <div class="col-4 rr-section-3-card">
+            <div class="col-12 col-sm-12 rr-section-3-card">
 
                 <div class="row rr-section-3-text">
                     <p>3 out of 5 users expressed concerns about trustworthiness when arranging the adoption and
@@ -153,7 +152,7 @@
 
             </div>
 
-            <div class="col-4 rr-section-3-card">
+            <div class="col-12 col-sm-12 rr-section-3-card">
 
                 <div class="row rr-section-3-text">
                     <p>Users reported credibility, consistent communication, and value alignment as their primary needs
@@ -162,7 +161,7 @@
 
             </div>
 
-            <div class="col-4 rr-section-3-card">
+            <div class="col-12 col-sm-12 rr-section-3-card">
 
                 <div class="row rr-section-3-text">
                     <p>Reviews, word-of-mouth, and the quality of a website revealed to be most influential in crafting
@@ -194,7 +193,7 @@
 
     </div>
     <div id="cs-rr-section-4" class="row cs-rr-style">
-        <div id="rr-4-text" class="col-6 cs-rr-text-container">
+        <div id="rr-4-text" class="col-12 col-sm-12 col-lg-6 cs-rr-text-container">
             <div id="rr-4-subtext-1" class="row cs-rr-style-text">
                 <div class="row">
                     <h6>USABILITY TEST SYNTHESIS:</h6>
