--- a/work.html
+++ b/work.html
@@ -44,13 +44,13 @@
             <h1>What do you want to see more of?</h1>
         </div>
         <div class="row work-cards">
-            <div id="ux-work" class="col-4 work-card">
+            <div id="ux-work" class="col-12 col-sm-12 col-lg-4 work-card">
                 <a href="ux-cs-landing.html">
                     <div class="row">
                         <h2>UX/UI Design Case Studies</h2>
                     </div>
                     <div class="row">
-                        <div class="col-6 offset-1">
+                        <div class="col-12 col-sm-12 col-lg-6 offset-1">
                             <img class="doodle doodleseen" src="/css/images/uxdoodleblack.svg">
                             <img class="doodle doodlehidden" src="/css/images/uxdoodlewhite.svg">
                         </div>
